--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,5 @@ after_success:
   - julia -e 'using Pkg; cd(Pkg.dir("ProperOrthogonalDecomposition")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   # documentation
   - julia -e 'using Pkg; Pkg.add("Documenter")'
+  - julia -e 'using Pkg; Pkg.add("PlotlyJS")'
   - julia -e 'using Pkg; cd(Pkg.dir("ProperOrthogonalDecomposition")); include(joinpath("docs", "make.jl"))'
