--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "≥ 0.7.0"
+julia = "^0.7, ^1.0"
+StatsBase = "^0.32"
 
 [extras]
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
