--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "^0.7, ^1.0"
+julia = "^1.0"
 StatsBase = "^0.32"
 
 [extras]
